Add the gameboard ui and some style to it

--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
 </head>
 <body>
     <div class="game">
-        <div class="header">Game-Board</div>
         <table class="game-board">
             <caption>Game-Board</caption>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td data-number="1">1</td>
+                    <td data-number="2">2</td>
+                    <td data-number="3">3</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td data-number="4">4</td>
+                    <td data-number="5">5</td>
+                    <td data-number="6">6</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td data-number="7">7</td>
+                    <td data-number="8">8</td>
+                    <td data-number="9">9</td>
                 </tr>
             </tbody>
         </table>
