Add a functionality that changes the player turn on the gameboard

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="game">
+        <div id="players">
+            <div class="player">O</div>
+            <div class="player">X</div>
+        </div>
         <table class="game-board">
             <caption>Game-Board</caption>
             <tbody>
