--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <caption>Game-Board</caption>
             <tbody>
                 <tr>
-                    <td data-number="1">1</td>
-                    <td data-number="2">2</td>
-                    <td data-number="3">3</td>
+                    <td data-number="1"></td>
+                    <td data-number="2"></td>
+                    <td data-number="3"></td>
                 </tr>
                 <tr>
-                    <td data-number="4">4</td>
-                    <td data-number="5">5</td>
-                    <td data-number="6">6</td>
+                    <td data-number="4"></td>
+                    <td data-number="5"></td>
+                    <td data-number="6"></td>
                 </tr>
                 <tr>
-                    <td data-number="7">7</td>
-                    <td data-number="8">8</td>
-                    <td data-number="9">9</td>
+                    <td data-number="7"></td>
+                    <td data-number="8"></td>
+                    <td data-number="9"></td>
                 </tr>
             </tbody>
         </table>
