--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="game">
         <div id="players">
-            <div class="player">O</div>
-            <div class="player">X</div>
+            <button class="player-x">X</button>
+            <button class="player-o">O</button>
         </div>
         <table class="game-board">
             <caption>Game-Board</caption>
