--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 </tr>
             </tbody>
         </table>
-        <div class="winner"></div>
+        <div class="winner hidden"></div>
+        <div class="play-again-container"><button class="play-again hidden">Play Again!</button></div>
     </div>
 </body>
 </html>
