Make the draw result when there is no winner

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </tr>
             </tbody>
         </table>
-        <div class="winner hidden"></div>
+        <div class="winner"></div>
         <div class="play-again-container"><button class="play-again hidden">Play Again!</button></div>
     </div>
 </body>
